# covert-channel-toolkit

./: CMakeLists.txt  LICENSE  README.md
channels/drng/: CMakeLists.txt  drng.cpp
channels/pp-l1d/: receiver.c  sender.c
misc/bench_drng/: drng_tput.cpp  gen_and_bench_drng.sh
misc/contention-l1d/: CMakeLists.txt  L1DContention.sh  create_l1d_contention.c  graph_aws.sh  measure_l1d_contention.c
misc/env/: setup_user.sh
scripts/: stress_test.sh
